# rsground

./: .gitignore  README.md  dev.dockerfile  docker-compose.dev.yml  justfile
.github/: dependabot.yml
backend/: .env  .env.example  .gitignore  Cargo.toml  build.rs
backend/migrations/: 20240825194806_sessions.sql  20240825201455_crates.sql  20240828040439_runners.sql  20240828100640_states.sql
backend/src/: main.rs
backend/src/crons/: clear_containers.rs  mod.rs  register.rs
backend/src/routes/: auth.rs  crates.rs  mod.rs  runner.rs  sessions.rs
backend/src/utils/: actix_utils.rs  analyzer.rs  auth.rs  communication.rs  crates.rs  database.rs  docker.rs  logger.rs  mod.rs  runner.rs  runners.rs
backend/src/utils/docker/: abstractions.rs  mod.rs  modules.rs
backend/src/utils/structures/: crates.rs  mod.rs  rsground.rs  session.rs  state.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/simple-icon/: index.tsx
frontend/src/components/status-bar/: index.tsx  styles.css
infra/: .dockerignore  compose.dev.yml  compose.prod.yml  dev.dockerfile  docker-compose.dev.yml  non-root-apparmor-profile
infra/images/: be.Dockerfile  be.dev.Dockerfile  be.prod.Dockerfile  fe.Dockerfile  fe.prod.Dockerfile
