[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-ratelimit = "0.3.1"
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.30"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"
shiplift = "0.7.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.11.0"
toml = "0.8.19"
urlencoding = "2.1.3"

# dependabot fixes
h2 = "0.4.6"
crossbeam-utils = "0.8.20"

[build-dependencies]
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.40.0", features = ["full"] }

# dependabot fixes
h2 = "0.4.6"
crossbeam-utils = "0.8.20"
