[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
chrono = "0.4.38"
colored = "2.1.0"
flexi_logger = "0.29.0"
futures-util = "0.3.30"
log = "0.4.22"
rand = "0.8.5"
shiplift = "0.7.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "sync"] }
