[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
chrono = "0.4.38"
colored = "2.1.0"
flexi_logger = "0.29.0"
futures-util = "0.3.30"
log = "0.4.22"
lsp-types = "0.97.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_repr = "0.1.19"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "sync"] }
toml = "0.8.19"
